# evolutionary-fsm-agentic-control

./: Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
tests/: conftest.py  test_ci_setup.py
