[tool.ruff]
target-version = "py312"
line-length = 110
indent-width = 4
fix = true
exclude = ["build", "dist", ".venv", ".mypy_cache", ".ruff_cache"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "B",   # bugbear
    "I",   # isort
    "UP",  # pyupgrade
    "N",   # pep8-naming
]

[tool.black]
line-length = 88
target-version = ["py312"]
exclude = '''
/(
    \.venv
  | build
  | dist
)/
'''

[project]
name = "evolutionary-fsm-agentic-control"
version = "0.1.0"
description = "A local, self-evolving control framework where an adaptive agent can modify the finite state machine's topology"
authors = [
    {name = "Leandro M. F. Machado", email = "leandrofahur@gmail.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=src",
    "--cov=tests",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
